--- a/SpotifyDownloader.csproj
+++ b/SpotifyDownloader.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.7.0" />
+    <PackageReference Include="System.Security.AccessControl" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="AutomationBase">
       <HintPath>..\Dependencies\AutomationBase.dll</HintPath>
     </Reference>
